# michilante_rtsp_dynamic_relay

./: .gitignore  Cargo.toml  Dockerfile  example.env
docker_compose/: docker-compose.yml
src/: lib.rs  main.rs
src/config/: implementation.rs  interface.rs
src/http_server/: appstate.rs  endpoints.rs  error.rs  mod.rs  setup.rs
src/rtsp_server/: mod.rs
staled_job/: Dockerfile
