[package]
name = "dynamic-rtsp-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["full"] }
glib = "0.20.9"
gstreamer = "0.23.5"
gst_rtsp_server = { package = "gstreamer-rtsp-server", version = "0.23.5", features = ["v1_22"] }
gst_rtsp = { package = "gstreamer-rtsp", version = "0.23.5" }
data-encoding = "2.8.0"
gio = { version = "0.20.9", features = ["v2_72"] }
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ulid = "1.2.1"
dotenvy = "0.15.7"
chrono = "0.4.41"
tracing = "0.1.41"
aws-sdk-dynamodb = "1.77.0"
aws-config = "1.6.3"
